src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/styles.css
/* ... */
.ui-dialog-titlebar {
  border-bottom: 1px solid #ddd;
  overflow: hidden;
  background-color: #eee;
  padding: 10px 15px;
  /*override jQuery UI styles, do not delete doubled properties*/
  border-width: 0 0 1px;
  border-radius: 0;
  background-image: none;
  padding: 10px 15px !important;
  font-weight: normal;
  cursor: auto !important;
}

.ui-dialog-titlebar > span {
  float: left;
  font-size: 18px;
  color: var(--dark-gray-color);
  /*override jQuery UI styles, do not delete doubled properties*/
  margin: 0 !important;
}

.ui-dialog-titlebar button {
  position: absolute;
  top: 0;
  right: 0;
  width: 42px;
  height: 42px;
  border: none;
  overflow: hidden;
  background: url('../images/close.png') center no-repeat;
  font-size: 0;
  /*override jQuery UI styles, do not delete doubled properties*/
  top: 0 !important;
  right: 0 !important;
  width: 42px !important;
  height: 42px !important;
  margin: 0 !important;
  border: none !important;
  border-radius: 0;
  background: url('../images/close.png') center no-repeat !important;
  padding: 0 !important;
}

.ui-dialog-titlebar button span {
  display: none !important;
}

.ui-dialog-content {
  padding: 15px;
  line-height: 20px;
  /*override jQuery UI styles, do not delete doubled properties*/
  background-color: #fff !important;
  padding: 15px 15px 20px 15px !important;
  color: var(--gray-color);
}

.ui-dialog-content .page {
  min-height: 0;
}

.ui-dialog-content .page-title {
  min-height: 0;
  margin: 0 0 15px;
  padding: 0px 10px 10px 10px;
  text-align: center;
}

.ui-dialog-content .page-title h1 {
  font-size: 24px;
  line-height: 30px;
}

.ui-dialog-content .back-in-stock-subscription-page {
  text-align: center;
}

.ui-dialog-content .back-in-stock-subscription-page .tooltip {
  margin-bottom: 10px;
}

.ui-dialog-content .back-in-stock-subscription-page .button-1 {
  border: none;
  background-color: var(--accent-blue-color);
  padding: 10px 15px;
  font-size: 15px;
  color: #fff;
  text-transform: uppercase;
}

.ui-dialog-content .back-in-stock-subscription-page .button-1:hover,
.ui-dialog-content .back-in-stock-subscription-page .button-1:focus {
  background-color: var(--accent-blue-active-color);
}

.eu-cookie-bar-notification {
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: 1050;
  width: 320px;
  height: auto;
  margin: -90px 0 0 -160px;
  border: 1px solid #ccc;
  box-shadow: 0 0 2px rgba(0,0,0,0.15);
  background-color: #fff;
  padding: 20px;
  text-align: center;
}

.eu-cookie-bar-notification .text {
  margin-bottom: 20px;
  line-height: 20px;
}

.eu-cookie-bar-notification button {
  min-width: 60px;
  margin: 5px 0 10px;
  border: none;
  background-color: var(--accent-blue-color);
  padding: 8px 12px;
  font-size: 14px;
  color: #fff;
}

.eu-cookie-bar-notification button:hover,
.eu-cookie-bar-notification button:focus {
  background-color: var(--accent-blue-active-color);
}

.eu-cookie-bar-notification a {
  display: block;
  color: var(--accent-blue-color);
}

.eu-cookie-bar-notification a:hover,
.eu-cookie-bar-notification a:focus {
  text-decoration: underline;
}


/*********** HEADER ***********/



.admin-header-links {
  background-color: var(--dark-gray-color);
  text-align: center;
  color: #eee;
}

.admin-header-links * {
  display: inline-block;
  margin: 0 10px;
  line-height: 35px;
  font-size: 12px;
  font-weight: bold;
}

.admin-header-links .impersonate {
  display: inline-block;
}

.admin-header-links .impersonate a {
  background-color: var(--dark-gray-color);
  padding: 0 15px;
}

.admin-header-links .impersonate a:hover,
.admin-header-links .impersonate a:focus {
  background-color: var(--gray-color);
}

.header {
  position: relative;
  z-index: 10;
  width: 95%;
  margin: auto;
  text-align: center;
}

.header-upper {
  position: relative;
  z-index: 1;
  border-bottom: 1px solid #ddd;
}

.header-selectors-wrapper {
  border-bottom: 1px solid #ddd;
  padding: 10px 0;
}

.header-selectors-wrapper > div {
  display: block;
  width: 50%;
  margin: 10px auto;
  vertical-align: middle;
}

.header-selectors-wrapper select {
  width: 100%;
}

.language-list {
  max-width: 100%;
  font-size: 0;
}

.language-list li {
  display: inline-block;
  margin: 0 1px;
  vertical-align: middle;
}

.language-list a {
  display: block;
  position: relative;
  width: 24px;
  height: 32px;
  line-height: 0;
}

.language-list img {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: auto;
}

.header-links-wrapper {
  position: relative;
  padding: 20px 0;
}

.header-links {
}

.header-links ul {
  font-size: 0;
}

.header-links li {
  display: inline-block;
  margin: 0 10px;
}

.header-links span,
.header-links a {
  display: inline-block;
  font-size: 12px; /*reset zeroing*/
  line-height: 36px;
  text-transform: uppercase;
}

.header-links a:hover,
.header-links a:focus {
  color: var(--accent-blue-active-color);
}

#topcartlink {
  display: block;
  width: 70%;
  max-width: 400px;
  margin: 10px auto 0;
  background-color: #f6f6f6;
  padding: 0 20px;
}

#topcartlink a {
  background: url('../images/shopping-bag.png') left center no-repeat;
  padding: 0 0 0 20px;
}

.header-lower {
  position: relative;
  z-index: 0;
  padding: 35px 0;
}

.header-logo {
  margin: 0 0 20px;
  text-align: center;
}

.header-logo a {
  display: inline-block;
  max-width: 100%;
  line-height: 0; /*firefox line-height bug fix*/
}

.header-logo a img {
  max-width: 100%;
  opacity: 1;
}

/* Search box */

.search-box form {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: 10px 0;
}

.search-box input.search-box-text {
  width: 200px;
  height: 36px;
  margin: 0 -1px 0 0;
}

.search-box .search-box-category {
  height: 36px;
}

.search-box .search-box-button {
  min-width: 86px;
  height: 36px;
  border: none;
  background-color: var(--accent-blue-color);
  padding: 0 15px;
  text-align: center;
  color: #fff;
  text-transform: uppercase;
}
/* ... */

